--- a/env.template
+++ b/env.template
@@ -9,5 +9,5 @@ DATA_DIRECTORY=sample-data
 # BABY_PHOTO_DIRECTORY=baby-photos
 # SCHOOL_PHOTO_DIRECTORY=school-photos
 
-SLIDESHOW_TITLE="My Slideshow"
-SLIDESHOW_SUBTITLE="My slideshow subtitle"
+SLIDESHOW_TITLE="Student Slideshow"
+SLIDESHOW_SUBTITLE="Springfield Elementary"
