Allow photos to be sourced from the web
Using local image files with the `md2gslides` tool only works well if you have a small number of images. To use more images, you should temporarily host them on the web yourself.

--- a/env.template
+++ b/env.template
@@ -1,5 +1,8 @@
 DATA_DIRECTORY=sample-data
 
+# The base photo location can be a local directory or a URL.
+BASE_PHOTO_LOCATION=sample-data
+
 # Uncomment if you need to override these.
 # STUDENT_LIST_FILENAME=student_list.csv
 # MARKDOWN_OUTPUT_FILENAME=slides.md
